--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -5,6 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="wifip2p.wifi.com.wifip2p.activity.BaseActivity">
+    tools:context=".activity.BaseActivity">
 
 </android.support.constraint.ConstraintLayout>
