--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,23 +2,188 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical"
-    tools:context="wifip2p.wifi.com.wifip2p.activity.MainActivity">
+    tools:context=".activity.MainActivity">
 
-    <Button
+    <!--<Button-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="发送文件"-->
+    <!--android:onClick="sendFile"/>-->
+    <!--<Button-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="接收文件"-->
+    <!--android:onClick="receiveFile"/>-->
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="发送文件"
-        android:onClick="sendFile"/>
-    <Button
-        android:layout_marginTop="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="接收文件"
-        android:onClick="receiveFile"/>
+        android:background="#b0000000"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:text="设备信息:"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+        <ListView
+            android:background="@drawable/border_write"
+            android:id="@+id/lv_device"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
+
+        </ListView>
+        <TextView
+            android:text="消息日志:"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+        <ScrollView
+            android:background="@drawable/border_write"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            >
+            <TextView
+                android:textColor="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/showTatuTv"/>
+        </ScrollView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border_write"
+            android:orientation="vertical"
+            android:layout_marginTop="10dp"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="5dp"
+                >
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:height="25dp"
+                    android:background="@drawable/buttonstyle"
+                    android:onClick="scanfDevices"
+                    android:text="扫描"
+                    android:textColor="#ffffff" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:height="25dp"
+                    android:background="@drawable/buttonstyle"
+                    android:onClick="hostModelChange"
+                    android:text="Host模式"
+                    android:textColor="#ffffff" />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:height="25dp"
+                    android:layout_marginLeft="5dp"
+                    android:background="@drawable/buttonstyle"
+                    android:onClick="createGroup"
+                    android:text="创建group"
+                    android:textColor="#ffffff" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:height="25dp"
+                    android:background="@drawable/buttonstyle"
+                    android:onClick="removeGroup"
+                    android:text="移除Group"
+                    android:textColor="#ffffff" />
+            </LinearLayout>
+           <!-- <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="8dp"
+                >
+
+
+            </LinearLayout>
+-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_margin="8dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/msgEt"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/edit_bg"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:layout_height="wrap_content" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#ffffff"
+                    android:onClick="sendMessage"
+                    android:layout_marginLeft="20dp"
+                    android:background="@drawable/buttonstyle"
+                    android:text="发送消息"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_below="@+id/btnLayout"
+                android:layout_width="match_parent"
+                android:layout_marginLeft="8dp"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/netImg"
+                    android:background="@drawable/media_talk"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/netTv"
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="正在使用WIFI网络"
+                    android:layout_gravity="center"
+                    android:textSize="15dp"
+                    />
+
+                <Button
+                    android:id="@+id/settings"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="设置WIFI" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+
+    </LinearLayout>
 
 </LinearLayout>
