--- a/app/src/main/res/layout/activity_receive_file.xml
+++ b/app/src/main/res/layout/activity_receive_file.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="wifip2p.wifi.com.wifip2p.activity.ReceiveFileActivity">
+    tools:context=".activity.ReceiveFileActivity">
 
     <Button
         android:id="@+id/btn_create"
