--- a/app/src/main/res/layout/activity_send_file.xml
+++ b/app/src/main/res/layout/activity_send_file.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="wifip2p.wifi.com.wifip2p.activity.SendFileActivity">
+    tools:context=".activity.SendFileActivity">
 
 
     <Button
