--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="channelitem_gray">#eaeaea</color>
+    <color name="nearblack">#434343</color>
+    <color name="black">#000000</color>
+    <color name="gray_ea">#eaeaea</color>
+    <color name="gray_90">#909090</color>
+    <color name="divider_gray">#d0d0d0</color>
+    <color name="white">#ffffff</color>
 </resources>
